--- a/create/create.css
+++ b/create/create.css
@@ -1,16 +1,89 @@
 #content{
 	width: 1000px;
-	
+	margin: 0 auto;
+	/*overflow: auto;*/
+	position: relative;
+}
+#tools{
+	border-bottom: 1px solid #000;
+	border-top: 1px solid #000;
+	border-right: 1px solid #000;
+	background-color: #EEE;
+	color: #333;
+	position: absolute;
+	right: -150px;
+	top: 100px;
+	width: 149px;
 }
 #form{
 	border-left: 2px solid #363636;
 	border-right: 2px solid #363636;
 	background-color: #d7d7d7;
+	/*margin: 0 auto 0 auto;*/
+}
+#form-header{
+	border-bottom: 2px solid black;
+	padding-top: 30px;
+	background-color: #A31919;
+}
+#form-title{
+	font-size: 40px;
+	text-align: left;
+	font-weight: bold;
+	padding-left: 20px;
+	padding-bottom: 5px;
+	font-family: "trebuchet ms", sans-serif;
 }
 #questions{
-	margin: 0px 15px;
+	margin: 0 15px;
+	padding-top: 5px;
 }
-.question{
-	border: 1px solid #d7d7d7;
+.question, .question-sample{
+	border: 1px solid #A31919;
 	border-radius: 5px;
+	margin: 5px 0 5px 0;
+	padding: 5px;
+	position: relative;
+	background-color: #CCC;
+}
+.question-sample{
+	border: 2px dotted #A31919;
+	opacity: 0.8;
+}
+.delete{
+	position: absolute;
+	right: 5px;
+	top: 0px;
+	border-bottom: 1px solid black;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
+	background-color: #FFF;
+	padding: 0px 3px;
+	cursor: pointer;
+}
+.q-title, .q-title-sample, .q-title-sample a{
+	font-size: 24px;
+	background-color: #CCC;
+	color: #222;
+	text-decoration: none;
+}
+.input-boxes{
+	border: 1px solid #333;
+	background-color: rgba(255, 255, 255, 0.3);
+	padding: 2px 5px;
+}
+#new-q{
+	/*display: none;*/
+	padding: 0 25px;
+	text-align: center;
+}
+#form-footer{
+	background-color: #520C0C;
+	font-size: 20px;
+	color: #CCC;
+	border-top: 2px solid #000;
+	padding: 10px 15px;
+}
+#powermsg{
+	float: right;	
 }
