--- a/create/create.css
+++ b/create/create.css
@@ -61,11 +61,12 @@
 	padding: 0px 3px;
 	cursor: pointer;
 }
-.q-title, .q-title-sample, .q-title-sample a{
+.q-title input, .q-title-sample input, .q-title-sample a{
 	font-size: 24px;
 	background-color: #CCC;
 	color: #222;
 	text-decoration: none;
+	border: none;
 }
 .input-boxes{
 	border: 1px solid #333;
